# AndroidUVC

./: .gitignore  AGENT.md  LICENSE  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: android.yml
aboutlibraries/: README.md
app/: build.gradle.kts
app/src/androidTest/java/net/d7z/net/oss/uvc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libusb/: CMakeLists.txt  config.h
app/src/main/cpp/libuvc/: CMakeLists.txt
app/src/main/cpp/libuvc/include/libuvc/: libuvc_config.h
app/src/main/cpp/libuvc/src/: device.c  stream.c
app/src/main/java/net/d7z/net/oss/uvc/: AboutActivity.kt  MainActivity.kt  NoticeTextActivity.kt  StartActivity.kt  UsbPermissionReceiver.kt  UvcStreamingService.kt
app/src/main/java/net/d7z/net/oss/uvc/ui/component/: UvcWidgets.kt
app/src/main/java/net/d7z/net/oss/uvc/ui/model/: StartGateUiState.kt  UvcUiModels.kt
app/src/main/java/net/d7z/net/oss/uvc/ui/screen/: AboutScreen.kt  CameraDetailScreen.kt  HomeOverviewScreen.kt  MainScreen.kt  StartGateScreen.kt
app/src/main/java/net/d7z/net/oss/uvc/ui/theme/: UvcTheme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_start.xml
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/net/d7z/net/oss/uvc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
